--- a/public/index.html
+++ b/public/index.html
@@ -91,15 +91,15 @@
             <td>Web VR 360 (Panorama)</td>
             <td>21/1/2023</td>
           </tr>
-          <tr class="table-row-click" data-href="">
+          <tr class="table-row-click" data-href="work6.html">
             <th>6</th>
-            <td>-</td>
-            <td>-</td>
+            <td>React Native camera</td>
+            <td>13/2/2023</td>
           </tr>
           <tr class="table-row-click" data-href="">
             <th>7</th>
-            <td>-</td>
-            <td>-</td>
+            <td>React Native </td>
+            <td>20/2/2023</td>
           </tr>
         </tbody>
       </table>
